src/test/deca/context/invalid/ContextSansObjet/OperationsBooleennes/OrBoolFloat.deca
//Description :
//	Vérification contextuelle de l'opérateur || avec pour entree <boolean, float>
//
//Résultats :
//	Erreur Contextuelle
//  Ligne 10 : les deux opérateurs doivent être de type boolean

{
    boolean x = true;
    boolean y = x || 1.0;
}